--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  Hello World
-  Hosting New Site Under Construction!
+<h3> Hello World </h3> 
+<p> Hosting New Site Under Construction! </p>
 </body>
 </html>
 
