--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-</!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,intial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ADunn Homepage Portfolio</title>
 </head>
+    <h1>Welcome to My Portfolio Homepage</h1>
 <body>
-<h3> Hello World </h3> 
-<p> Hosting New Site Under Construction! </p>
+    <p>To be continued....</p>
+    <img src=https://giphy.com/gifs/TKHZR5yivdiyVaEWW8 />
 </body>
 </html>
-
