--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Welcome to My Portfolio Homepage</h1>
 <body>
     <p>To be continued....</p>
-    <img src=https://giphy.com/gifs/TKHZR5yivdiyVaEWW8 />
+    <img src="https://giphy.com/gifs/TKHZR5yivdiyVaEWW8" />
 </body>
 </html>
