--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>To be continued....</p>
     <img src="https://giphy.com/gifs/TKHZR5yivdiyVaEWW8" />
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 </html>
