--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Welcome to My Portfolio Homepage</h1>
 <body>
     <p>To be continued....</p>
-    <img src="https://giphy.com/gifs/TKHZR5yivdiyVaEWW8" />
+    
+    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjhoMHE5NnFmcDZmeXcwZnlrdHZla2UxMWp1c2pwaDZxaWl4am5lOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TKHZR5yivdiyVaEWW8/giphy.gif" /><br>
     <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 </html>
