--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADunn Homepage Portfolio</title>
+    <link rel="stylesheet" href="./dunnstyle.css">
 </head>
     <h1>Welcome to My Portfolio Homepage</h1>
 <body>
