FEAT: Update Skills Format & Page Links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
     <h1>Welcome to My Portfolio Homepage</h1>
 <body>
-    <p>To be continued....</p>
+    <p>Work in Progress....</p>
+    <section><h3>Platform/IAC Skills:</h3>
+        <ul>
+            <li><a href="./Ansible/ansible.html">Ansible</a></li>
+            <li><a href="./Shell_Scripting/shell.html">Shell Scripting</a></li>
+            <li>Advanced Linux</li>
+            <li>Terraform</li>
+            <li>Bicep</li>
+            <li>Boto3</li>
+            <li>Cisco Networking</li>
+            <li>Kubernetes</li>
+            <li>Docker</li>
+            <li>ArgoCD</li>
+        </ul>
+    </section>
     
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjhoMHE5NnFmcDZmeXcwZnlrdHZla2UxMWp1c2pwaDZxaWl4am5lOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TKHZR5yivdiyVaEWW8/giphy.gif" /><br>
-    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
+</body>	
 </html>
