--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <p>Work in Progress....</p>
     <section><h3>Platform/IAC Skills:</h3>
         <ul>
-            <li><a href="./Ansible/ansible.html">Ansible</a></li>
-            <li><a href="./Shell_Scripting/shell.html">Shell Scripting</a></li>
+            <li><a href="./Ansible/ansible.html" target="_blank">Ansible</a></li>
+            <li><a href="./Shell_Scripting/shell.html" target="_blank">Shell Scripting</a></li>
             <li>Advanced Linux</li>
             <li>Terraform</li>
             <li>Bicep</li>
-            <li>Boto3</li>
+            <li>Boto3 - SDK</li>
             <li>Cisco Networking</li>
             <li>Kubernetes</li>
             <li>Docker</li>
