FEAT: Add Security - Target

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p>Work in Progress....</p>
     <section><h3>Platform/IAC Skills:</h3>
         <ul>
-            <li><a href="./Ansible/ansible.html" target="_blank">Ansible</a></li>
-            <li><a href="./Shell_Scripting/shell.html" target="_blank">Shell Scripting</a></li>
+            <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">Ansible</a></li>
+            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer">Shell Scripting</a></li>
             <li>Advanced Linux</li>
             <li>Terraform</li>
             <li>Bicep</li>
