--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
     <h1>Welcome to My Portfolio Homepage</h1>
 <body>
-    <p>Work in Progress....</p>
+    <blockquote><em>We Are No Better, No Less Than Anyone... But for the grace of God, go I.</em></blockquote>
+    <hr/>
     <section><h3>Platform/IAC Skills:</h3>
         <ul>
             <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">Ansible</a></li>
@@ -23,7 +24,20 @@
             <li>ArgoCD</li>
         </ul>
     </section>
-    
+    <!-- <section><h3>Generative AI & Machine Learning:</h3>
+        <ul>
+            <li> Generative AI BootCamp </li>
+            <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">AWS Generative AI Developer Professional </a></li>
+            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer"> AWS Machine Learning Specialty</a></li>
+            <li>Azure AI Engineer </li>
+            <li>Azure Data Science Associate </li>     
+            <li> </li>
+            <li> </li>
+            <li> </li>
+            <li> </li>
+            <li> </li>
+        </ul>
+    </section>  -->
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjhoMHE5NnFmcDZmeXcwZnlrdHZla2UxMWp1c2pwaDZxaWl4am5lOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TKHZR5yivdiyVaEWW8/giphy.gif" /><br>
     <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
 </body>	
