Full Stack Engineering - Homepage

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <hr/>
     <section><h3>Platform/IAC Skills:</h3>
         <ul>
-            <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">Ansible</a></li>
-            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer">Shell Scripting</a></li>
+            <li><a href="./Platform_Engineering/Ansible/ansible.html" target="_blank" rel="noopener noreferrer">Ansible</a></li>
+            <li><a href="./Platform_Engineering/Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer">Shell Scripting</a></li>
             <li>Advanced Linux</li>
             <li>Terraform</li>
             <li>Bicep</li>
@@ -24,20 +24,72 @@
             <li>ArgoCD</li>
         </ul>
     </section>
+    <hr/>
     <!-- <section><h3>Generative AI & Machine Learning:</h3>
         <ul>
             <li> Generative AI BootCamp </li>
             <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">AWS Generative AI Developer Professional </a></li>
-            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer"> AWS Machine Learning Specialty</a></li>
+            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer"> AWS Machine Learning Specialty (Retired)</a></li>
             <li>Azure AI Engineer </li>
             <li>Azure Data Science Associate </li>     
             <li> </li>
             <li> </li>
-            <li> </li>
-            <li> </li>
-            <li> </li>
         </ul>
-    </section>  -->
+    </section> -->
+    <!-- <section><h3>Product Management:</h3>
+        <ul>
+            <li> Project Management Professional (PMP) </li>
+            <li> IBM - Product Manager </li>
+            <li> IBM - AI Product Manager</li>     
+            <li> Microsoft - AI Product Manager </li>
+        </ul>
+    </section> -->
+    <!-- <hr/>
+    <section><h3>Full Stack Engineering:</h3>
+        <ul>
+            <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">FrontEnd Engineering</a>
+                </li>
+            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer"> Backend Engineering</a></li>
+            <li>MERN Stack:
+                <ul>
+                    <li>MongoDB</li>
+                    <li>Express.js</li>
+                    <li>React.js</li>
+                    <li>Node.js</li>
+                </ul>
+            </li>
+            <li>LAMP Stack:
+                <ul>
+                    <li>Linux</li>
+                    <li>Apache</li>
+                    <li>MySQL</li>
+                    <li>PHP</li>
+                </ul>
+            </li>
+            <li>FARM Stack:
+                <ul>
+                    <li>FastAPI</li>
+                    <li>React</li>
+                    <li>MongoDB</li>
+                </ul>
+            </li>
+            <li>Django - Vue:
+                <ul>
+                    <li>Django</li>
+                    <li>React/Vue</li>
+                    <li>PostgresSQL/MySQL</li>
+                </ul>
+            </li>
+            <li>Flask - React:
+                <ul>
+                    <li>Flask</li>
+                    <li>React</li>
+                </ul>
+            </li>
+        </ul>
+    </section>  
+    <hr/> -->
+    
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjhoMHE5NnFmcDZmeXcwZnlrdHZla2UxMWp1c2pwaDZxaWl4am5lOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TKHZR5yivdiyVaEWW8/giphy.gif" /><br>
     <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
 </body>	
