--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <li>ArgoCD</li>
         </ul>
     </section>
-    <hr/>
-    <!-- <section><h3>Generative AI & Machine Learning:</h3>
+    <!-- <hr/>
+    <section><h3>Generative AI & Machine Learning:</h3>
         <ul>
             <li> Generative AI BootCamp </li>
             <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">AWS Generative AI Developer Professional </a></li>
@@ -44,13 +44,14 @@
             <li> Microsoft - AI Product Manager </li>
         </ul>
     </section> -->
-    <!-- <hr/>
+    <hr/>
     <section><h3>Full Stack Engineering:</h3>
         <ul>
-            <li><a href="./Ansible/ansible.html" target="_blank" rel="noopener noreferrer">FrontEnd Engineering</a>
+            <li><a href="./Full_Stack_Engineering/FrontEnd_Engineering/front.html" target="_blank" rel="noopener noreferrer">FrontEnd Engineering</a>
                 </li>
-            <li><a href="./Shell_Scripting/shell.html" target="_blank" rel="noopener noreferrer"> Backend Engineering</a></li>
-            <li>MERN Stack:
+            <li><a href="./Full_Stack_Engineering/Backend_Engineering/index.html" target="_blank" rel="noopener noreferrer"> Backend Engineering</a></li>
+            <br>
+            <!-- <li>MERN Stack:
                 <ul>
                     <li>MongoDB</li>
                     <li>Express.js</li>
@@ -88,9 +89,9 @@
             </li>
         </ul>
     </section>  
-    <hr/> -->
+    <hr/>  -->
     
     <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjhoMHE5NnFmcDZmeXcwZnlrdHZla2UxMWp1c2pwaDZxaWl4am5lOCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/TKHZR5yivdiyVaEWW8/giphy.gif" /><br>
-    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
+    <!-- <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/> -->
 </body>	
 </html>
